fixed collapse button not showing, still need to fix collapse menu bg color

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,30 @@ li{
 .navbar{
     background-color: #222629;
     height: 50px;
+    width: 100%;
     /* margin-bottom: 10px; */
+}
+
+.navbar .navbar-nav > .active > a,
+.navbar .navbar-nav > .active > a:hover,
+.navbar .navbar-nav > .active > a:focus {
+    color: #fff;
+    /* background-color: (rgba(17, 17, 17, .5)) */
+    background-color: #222629;
+
+} 
+
+.navbar .navbar-nav>li>a{
+    color: #fcfcfc !important ;
+    text-shadow: 1px 1px 2px #0a0a0a;
+}
+.navbar .navbar-nav li a:active,
+.navbar .navbar-nav li a:hover,
+.navbar .navbar-nav li a:focus{
+    color: #61892F !important;
+    /* background-color: rgba(17, 17 , 17, .2); */
+    background-color: #222629;
+
 }
 
 .jumbotron{
